# 2023-I

./: .gitignore  CMakeLists.txt  README.md
CPC/CPC contest/: A.cpp  D.cpp  E.cpp
CPC/Codeforces/: Helpful_maths.cpp  Love_Story.cpp  Next_Round.cpp  Theatre_Square.cpp  Watermelon.cpp  Way_Too_Long_Words.cpp  template.cpp
DB1/S10/: S10_lab0106.sql
DB1/S11/: console.sql  console_1.sql
DB1/S13/: LabS12_Transacciones.sql  PC2_P2.sql  p2_secretQuery.sql
DB1/S16/: ExamFinal.sql
DB1/S7/: LabS7A.sql  LabS7B.sql
DB1/S8/: asesoria1505.sql  asesoria1705.sql  labo7.2.sql  labo8.1.sql  repasitoSQL.sql  repasitoSQL_S6.sql  repasitoSQL_S8.sql  trigger1705.sql
DB1/S9/: PC2.sql  TareaS6.2.sql  TareaS6.2_V2.sql  pc2_2023_1_rommel_solu.sql  repasitoSQL_S6.sql  repasitoSQL_S7.sql
DB1/s1/: porticos.py  porticos_benja.py  tests.py
DBP/: appinventor.py
DBP/Flask_Jinja_course/: requeriments.txt
DBP/Flask_course/: main.py  requeriments.txt
DBP/Flask_postgres/: app.py  db.py  manage.py  models.py  requeriments.txt
DBP/Others/: index.html  styles.css
DBP/S2/: index.html  scripts.js  styles.css
DBP/S3/: Consultar_perro.php  Registrar_Perro.php  consulta.css  consulta.html  index.html  main.css  registro.css  registro.html
DBP/S9/: index.py
DataBase-1/s1/: porticos.py  porticos_benja.py
Estadistica/: .RData  .Rhistory
Estadistica/Proyecto/: Avance PG0.html  Avance PG0.qmd  LimpiezaDB2.qmd  Main.qmd
Estadistica/S1/: Carga de datos.qmd  DD20230331.csv
Estadistica/S2/: LC1p8.qmd  TS2.Rmd
Estadistica/S3/: S2_Informe.html  Semana3.qmd
Estadistica/S4/: DD20230421.csv  S4Lab.qmd  S4Teo1.qmd
Estadistica/S5/: S5_Teo2704.qmd  ts4.qmd
EyP/: .RData  .Rhistory
EyP/S1/: Carga de datos.html  S1.html  S1.qmd  styles.css
EyP/S10/: A10.qmd  LabS10.qmd
EyP/S11/: LabS11.qmd
EyP/S12/: LabS12.qmd
EyP/S13/: Codests8.qmd
EyP/S14/: Lab S14.qmd  TS10.qmd
EyP/S15/: Distri_Muestral.Rmd  (+2 more)
Others/: Hackerrank.cpp  awesomereadme.md
P3/s5/: teo.cpp
(+351 files in other folders)
